unpackaged/main/default/objects/RecalculatePayments__e/RecalculatePayments__e.object-meta.xml
<CustomObject>
    <label>Recalculate Payments</label>
    <pluralLabel>Recalculate Payments</pluralLabel>
</CustomObject>