unpackaged/main/default/objects/RecalculatePayments__e/fields/ClaimBrainCalculation__c.field-meta.xml
<CustomField>
    <fullName>ClaimBrainCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ClaimBrain Calculation</label>
    <type>Checkbox</type>
</CustomField>