unpackaged/main/default/objects/RecalculatePayments__e/fields/DeleteZeroAdjustments__c.field-meta.xml
<CustomField>
    <fullName>DeleteZeroAdjustments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeleteZeroAdjustments</label>
    <type>Checkbox</type>
</CustomField>