unpackaged/main/default/objects/RecalculatePayments__e/fields/PaymentSpecificationId__c.field-meta.xml
<CustomField>
    <fullName>PaymentSpecificationId__c</fullName>
    <label>Payment Specification Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>