unpackaged/main/default/objects/RecalculatePayments__e/fields/RunOverpaymentCheck__c.field-meta.xml
<CustomField>
    <fullName>RunOverpaymentCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RunOverpaymentCheck</label>
    <type>Checkbox</type>
</CustomField>